@@ -1,3 +1,7 @@
+Release ...
+* lex: An appropriate prototype for yyreject() is now supplied when the
+  -e or -w options are used.
+
 Release 051216
 * m4: The traditional variant now accepts the shift operators "<<" and
   ">>" for the "eval" macro.
